<resources>
    <string name="app_name">AFG</string>
    <string name="welcomeStr">Welcome to (APP NAME)</string>
    <string name="welcomeDescStr1">This app will use your inputted info to track your mood.</string>
    <string name="welcomeDescStr2">To get started, please select which features you would like to track.</string>
    <string name="locationStr">Location</string>
    <string name="activityStr">Activities</string>
    <string name="companyStr">Who you are with</string>
    <string name="sleepStr">Amount of sleep</string>
    <string name="otherStr">Other</string>
    <string name="continueStr">Continue</string>
    <string name="customFeatureHintStr">Enter custom feature</string>
    <string name="customFeatureStr">Enter custom feature</string>
    <string name="peopleStr">Who are you with?</string>
    <string name="parentStr">Parent</string>
    <string name="siblingStr">Sibling</string>
    <string name="teacherStr">Teacher</string>
    <string name="friendStr">Friend</string>
    <string name="customPersonStr">Add custom person</string>
    <string name="activitiesStr">What are you doing?</string>
    <string name="eatingStr">Eating</string>
    <string name="workingStr">Working</string>
    <string name="sportStr">Playing a sport</string>
    <string name="tvStr">Watching TV</string>
    <string name="friendsStr">Hanging out with friends</string>
    <string name="customActivityStr">Add custom activity</string>
    <string name="placeStr">Where are you?</string>
    <string name="homeStr">Home</string>
    <string name="workStr">Work</string>
    <string name="schoolStr">School</string>
    <string name="restaurantStr">Restaurant</string>
    <string name="libraryStr">Library</string>
    <string name="customPlaceStr">Add custom location</string>
    <string name="homeTextStr">Home</string>
    <string name="goalsTextStr">Goals</string>
    <string name="settingsTextStr">Settings</string>
    <string name="chartsTextStr">Charts</string>
    <string name="emotionsStr">Please enter which emotions you would like to track. The emotions you select will present as options in your daily entry logs. The emotions you do not select will not be options in your daily log. If you would like to make changes in what you selected go to system preferences. </string>
    <string name="happyStr">Happy</string>
    <string name="sadStr">Sad</string>
    <string name="angryStr">Angry</string>
    <string name="stressStr">Stress</string>
    <string name="graphsTextStr">Graphs</string>
    <string name="SummaryText1Str">Text</string>
    <string name="EntryTextStr">Please select the emotion you are feeling right now and rate the intensity of that emotion from 1-10. 10 being the most intense.</string>
    <string name="entriesStr">Entries</string>
    <string name="ratingEditTextHint">Enter a positive integer</string>
    <string name="goals1Str">I want</string>
    <string name="goals2Str">to be more correlated with</string>
    <string name="goalsHint1Str">Enter emotion</string>
    <string name="goalsHint2Str">Enter time of day</string>

    <string name="timesDescStr1">The app will ask you to make an entry three times a day. Please provide a range of times to
    be notified in the morning, afternoon, and evening. The app will take this range and divide into sections of morning, afternoon, and evening times. You will only be asked to make entries at times within this range.</string>
    <string name="addButtonStr">ADD</string>

    <string-array name="morningTimes">
        <item> 12:00 AM</item>
        <item> 1:00 AM</item>
        <item> 2:00 AM</item>
        <item> 3:00 AM</item>
        <item> 4:00 AM</item>
        <item> 5:00 AM</item>
        <item> 6:00 AM</item>
        <item> 7:00 AM</item>
        <item> 8:00 AM</item>
        <item> 9:00 AM</item>
        <item> 10:00 AM</item>
        <item> 11:00 AM</item>
    </string-array>

    <string-array name="eveningTimes">
        <item> 12:00 PM</item>
        <item> 1:00 PM</item>
        <item> 2:00 PM</item>
        <item> 3:00 PM</item>
        <item> 4:00 PM</item>
        <item> 5:00 PM</item>
        <item> 6:00 PM</item>
        <item> 7:00 PM</item>
        <item> 8:00 PM</item>
        <item> 9:00 PM</item>
        <item> 10:00 PM</item>
        <item> 11:00 PM</item>
    </string-array>

    <string-array name="entriesArray">

    </string-array>

    <string name="locationBox">com.example.afg.locationBox</string>
    <string name="activityBox">com.example.afg.activityBox</string>
    <string name="companyBox">com.example.afg.companyBox</string>
    <string name="sleepBox">com.example.afg.sleepBox</string>

    <string name="happyBox">com.example.afg.happyBox</string>
    <string name="sadBox">com.example.afg.sadBox</string>
    <string name="angryBox">com.example.afg.angryBox</string>
    <string name="stressBox">com.example.afg.stressBox</string>
    <string name="otherBox">com.example.afg.otherBox</string>
    <string name="ratingEditText">com.example.afg.ratingEditText</string>
</resources>
