<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activitiesLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities">

    <TextView
        android:id="@+id/activityDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/activitiesStr"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="147dp" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:onClick="openActivity"
        android:text="@string/continueStr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:layout_width="324dp"
        android:layout_height="732dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityDesc">

        <RadioButton
            android:id="@+id/working"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="75dp"
            android:text="@string/workingStr"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/tv"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="75dp"
            android:text="@string/tvStr"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/eating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="75dp"
            android:text="@string/eatingStr"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/sport"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="75dp"
            android:text="@string/sportStr"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/friends"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="75dp"
            android:text="@string/friendsStr"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="75dp"
            android:text="@string/otherStr"
            android:textSize="18sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>