<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emotionsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Emotions">

    <RadioGroup
        android:layout_width="408dp"
        android:layout_height="535dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotionsDesc">

        <RadioButton
            android:id="@+id/sadBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="75dp"
            android:text="@string/sadStr"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="75dp"
            android:text="@string/friendStr"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/happyBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="75dp"
            android:text="@string/happyStr"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="75dp"
            android:text="@string/teacherStr"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="75dp"
            android:text="@string/otherStr"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/emotionsDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/emotionsStr"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="143dp"
        android:onClick="goToActivities"
        android:text="@string/continueStr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>