<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/SummaryTextStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="596dp"
        android:text="@string/goalsTextStr"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chartsTextStr" />

    <TextView
        android:id="@+id/homeTextStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="16dp"
        android:text="@string/homeTextStr"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chartsTextStr" />

    <TextView
        android:id="@+id/goalsTextStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="16dp"
        android:text="@string/goalsTextStr"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/settingsTextStr" />

    <TextView
        android:id="@+id/settingsTextStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="16dp"
        android:text="@string/settingsTextStr"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/chartsTextStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginBottom="16dp"
        android:text="@string/chartsTextStr"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/homeStr"
        android:onClick="openActivitySettingz"
        app:layout_constraintBottom_toTopOf="@+id/settingsTextStr"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageButton
        android:id="@+id/goalsButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/goalsTextStr"
        android:onClick="openActivityHomie"
        app:layout_constraintBottom_toTopOf="@+id/homeTextStr"
        app:layout_constraintStart_toEndOf="@+id/chartsButton"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/settingsTextStr"
        android:onClick="openActivityGoalz"
        app:layout_constraintBottom_toTopOf="@+id/goalsTextStr"
        app:layout_constraintEnd_toStartOf="@+id/homeButton"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageButton
        android:id="@+id/chartsButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/chartsTextStr"
        android:onClick="openActivityGraphz"
        app:layout_constraintBottom_toTopOf="@+id/chartsTextStr"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />


</androidx.constraintlayout.widget.ConstraintLayout>