<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Entries">

    <Spinner
        android:id="@+id/entriesDropdown"
        android:layout_width="197dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ratingEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474" />

    <TextView
        android:id="@+id/entriesDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="35dp"
        android:text="@string/EntryTextStr"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/entriesDropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="501dp"
        android:layout_marginEnd="215dp"
        android:layout_marginBottom="138dp"
        android:onClick="openActivityHomie"
        android:text="@string/continueStr"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entriesDropdown" />

    <Button
        android:id="@+id/entriesAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createStrings"
        android:text="@string/addButtonStr"
        app:layout_constraintBottom_toBottomOf="@+id/ratingEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ratingEditText"
        app:layout_constraintTop_toTopOf="@+id/ratingEditText" />

    <EditText
        android:id="@+id/ratingEditText"
        android:layout_width="199dp"
        android:layout_height="51dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ratingEditTextHint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/entriesDropdown"
        app:layout_constraintEnd_toStartOf="@+id/entriesAddButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/entriesDropdown"
        app:layout_constraintTop_toTopOf="@+id/entriesDropdown" />
</androidx.constraintlayout.widget.ConstraintLayout>